# AI_Agents

CrewAI-Projects/crew_local_llm/: agents.py  crew.py  tools.py
CrewAI-Projects/crewai/: helper.py  main.py  requirements.txt
CrewAI-Projects/crewai/config/: agents.yaml  tasks.yaml
CrewAI-Projects/crewai/db/: chroma.sqlite3
CrewAI-Projects/crewgooglegemini/: crew.py  new-blog-post.md
RAG-Multiagent-with-Langgraph/: MainApi.py  UI.py  rag.py  readme.md  requirements.txt  router.py  testing_api.py  testing_pipeline.py  tools.py
cookbook/: liteLLM.ipynb
docs/docs/examples/embeddings/: voyageai.ipynb
rag_multiagent/: UI.py  app.py  generate_chain.py  main.py  pipeline.py  pyproject.toml  rag_init.py  router.py  streamlit_pipeline.py  test2.py  tools.py
